# royalestate_odoo

./: .gitignore  CLAUDE.md
.claude/commands/: deploy.md
addons/oca_storage/: README.md  eslint.config.cjs  requirements.txt  test-requirements.txt
addons/oca_storage/fs_attachment_s3/: README.rst  __manifest__.py
addons/oca_storage/fs_folder/: README.rst  __manifest__.py  fields.py  fs_stream.py
addons/oca_storage/fs_folder_demo/: README.rst  __manifest__.py
addons/oca_storage/fs_folder_ms_drive/: README.rst  __manifest__.py
addons/oca_storage/fs_folder_webdav/: README.rst  __manifest__.py
addons/oca_storage/fs_storage/: __manifest__.py
addons/oca_storage/fs_storage_ms_drive/: README.rst  __manifest__.py
addons/oca_storage/image_tag/: README.rst  __manifest__.py
addons/oca_storage/microsoft_drive_account/: README.rst  __manifest__.py
addons/oca_storage/setup/_metapackage/: pyproject.toml
addons/oca_storage/storage_backend_ftp/: README.rst  __manifest__.py
addons/oca_storage/storage_backend_s3/: README.rst  __manifest__.py  regions.py
addons/oca_storage/storage_image/: README.rst  __manifest__.py
addons/oca_storage/storage_image_product/: README.rst  __manifest__.py
addons/royal_estate/: __manifest__.py  hooks.py
docker/: compose.yaml
podman/: compose.yaml
todos/: 001-wall-material-visibility.yaml  002-area-land-visibility.yaml  003-gas-visibility.yaml  004-water-visibility.yaml  005-sewage-visibility.yaml  006-remove-security-bars.yaml  007-bathroom-selection-update.yaml  008-balcony-add-terrace.yaml
(+206 files in other folders)
