[project]
name = "odoo-addons-oca-storage"
version = "18.0.20251020.0"
dependencies = [
    "odoo-addon-fs_attachment==18.0.*",
    "odoo-addon-fs_attachment_s3==18.0.*",
    "odoo-addon-fs_file==18.0.*",
    "odoo-addon-fs_folder==18.0.*",
    "odoo-addon-fs_folder_demo==18.0.*",
    "odoo-addon-fs_folder_ms_drive==18.0.*",
    "odoo-addon-fs_folder_webdav==18.0.*",
    "odoo-addon-fs_image==18.0.*",
    "odoo-addon-fs_storage==18.0.*",
    "odoo-addon-fs_storage_ms_drive==18.0.*",
    "odoo-addon-image_tag==18.0.*",
    "odoo-addon-microsoft_drive_account==18.0.*",
    "odoo-addon-storage_backend==18.0.*",
    "odoo-addon-storage_backend_ftp==18.0.*",
    "odoo-addon-storage_backend_s3==18.0.*",
    "odoo-addon-storage_backend_sftp==18.0.*",
    "odoo-addon-storage_file==18.0.*",
    "odoo-addon-storage_image==18.0.*",
    "odoo-addon-storage_image_product==18.0.*",
    "odoo-addon-storage_media==18.0.*",
    "odoo-addon-storage_media_product==18.0.*",
    "odoo-addon-storage_thumbnail==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
